add: punti di raccolta

--- a/find-exit-vue/TODO
+++ b/find-exit-vue/TODO
@@ -1,3 +1,6 @@
-- add home page graphic
-- add about page
-- add aule map 
+- redo card room graphic
+- only rspp account can view "punti di raccolta"
+- when click a card show 2 images: 
+    + punto di raccolta sulla mappa
+    + aula sulla mappa
+- 
